// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Button snapshot for primary variant 1`] = `
<button
  class="sc-bdfCDU fLjGwI"
  variant="primary"
>
  Click me
</button>
`;

exports[`Button Button snapshot for secondary variant 1`] = `
<button
  class="sc-bdfCDU bvppbh"
  variant="secondary"
>
  Click me
</button>
`;

exports[`Button Button snapshot for success variant 1`] = `
<button
  class="sc-bdfCDU iTZJmY"
  variant="success"
>
  Click me
</button>
`;
